email/1.6/modules/ROOT/pages/email-examples.adoc
= Email Connector Examples 1.6 - Mule 4
:keywords: anypoint, connectors, transports

To fully benefit from using Anypoint Connector for Email (Email Connector), see the following examples to configure the connector.

* xref:email-send.adoc[Send Emails and Attachments] +
Configure the *Send* operation to send emails and attachments over SMTP or SMTPS servers.
* xref:email-list.adoc[List Emails] +
Configure Email Connector and IMAP or POP3 protocols to list emails.
* xref:email-gmail.adoc[Connect to Gmail] +
Configure Email Connector and IMAP, POP3, and SMTP protocols to connect to your Gmail account.
* xref:email-trigger.adoc[Trigger a Flow When Receiving a New Email] +
Configure the *On New Email - IMAP* or *On New Email - POP3* sources to retrieve all the emails in an IMAP or POP3 mailbox, and generate a new message for each unread email found. Additionally, configure the *Delete After Retrieve*, *Enable Watermark*, *IMAP Matcher* or *POP3 Matcher*, *Attachment Naming Strategy*, and
*Enable Remote Search* parameters for these sources.
* xref:email-attachment.adoc[Set Parsing Text File Attachment as Body Message] +
Set the system property `parsing.text.attachment.as.body` to change the behavior of parsing attached text files when the file is the only content in the message.
* xref:email-move-folder.adoc[Move Messages Between Folders for IMAP/S Connection Providers] +
Configure the *Move to folder* operation to move messages between folders for IMAP and IMAPS connection providers.


== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
